updated changed files. Beta_home is now working

--- a/src/history_server/templates/beta_home.html
+++ b/src/history_server/templates/beta_home.html
@@ -11,7 +11,7 @@
     <title>Save History - An App to save your terminal history</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="http://getbootstrap.com/dist/css/bootstrap.css" rel="stylesheet">
+    <link href="../static/assets/css/bootstrap.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -20,16 +20,38 @@
     <![endif]-->
 
     <!-- Custom styles for this template -->
-    <link href="http://getbootstrap.com/examples/carousel/carousel.css" rel="stylesheet">
+    <link href="../static/assets/css/carousel.css" rel="stylesheet">
+
+    <link href="../static/assets/css/bootstrap-glyphicons.css" rel="stylesheet">
 
     <style type="text/css">
         #title {
             color: white;
             text-align: center;
             font-size: 4em;
-            padding-bottom: 10%;
+            /*padding-bottom: 10%;*/
         }
 
+        h2 {
+            font-size: 2.5em;
+        }
+
+        .row p{
+            font-size: 1em;
+        }
+
+        .marketing {
+            background-color: #f6f6f6;
+        }
+
+        .carousel {
+            background-color: #f6f6f6;
+            margin-bottom: 0px;
+        }
+
+        body {
+            background-color: #f6f6f6;
+        }
 
     </style>
     
@@ -92,12 +114,12 @@
           <div class="container">
             <div class="carousel-caption">
             <div>
-                <h1 id='title'><i>Save</i>History.</h1>
+                <h1 class='hero' id='title'><i>Save</i>History.</h1>
             </div>
 
               <h1>Save ALL the History</h1>
               <p>Can't remember that command that you ran a couple of months ago? You need <i>Save</i>History. All your terminal history, from all your terminals saved in one easy place.</p>
-              <p><a class="btn btn-lg btn-primary" href="#">Sign up today, for an early access Beta</a></p>
+              <p><a class="btn btn-lg btn-success" href="#">Sign up now for the beta!</a></p>
             </div>
           </div>
         </div>
@@ -126,119 +148,42 @@
       <a class="right carousel-control" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a> -->
     </div><!-- /.carousel -->
 
-    <div class="features">
-      <div class="feature">
-        <h2><i class="icon-cogs"></i>Any language</h2>
-        <p>Buildbox uses your own infrastructure to run builds, so it doesn't matter whether your application is in Java, Ruby or Go. You have the ability to use whatever language you want.</p>
-        <p>Simply run <code>gem install buildbox</code> on your server, and then <code>buildbox agent:start</code> to start running builds!</p>
-      </div>
-
-      <div class="feature">
-        <h2><i class="icon-lock"></i>Your code stays secure</h2>
-        <p>Keep your code safe and private by keeping it on your own infrastructure.</p>
-        <p>Feel confident deploying to your production systems without sharing private keys to third parties.</p>
-      </div>
-
-      <div class="feature">
-        <h2><i class="icon-code"></i>Trigger builds with HTTP</h2>
-        <p>The Buildbox API allows you to schedule builds and customize per-build environment variables.</p>
-        <p>It's easy to set up post-commit hooks on your version control system to trigger builds. We'll show you how!</p>
-      </div>
-
-      <div class="feature">
-        <h2><i class="icon-github"></i>Works with GitHub</h2>
-        <p>Connect your GitHub account to Buildbox so it updates pull requests when builds finish.</p>
-        <p>Buildbox avoids requesting full read access to your private repositories, keeping you in control of your own code.</p>
-      </div>
-
-      <div class="feature">
-        <h2><i class="icon-bitbucket"></i>...and Bitbucket</h2>
-        <p>Buildbox comes with support for Bitbucket. It can automatically create webhooks for you and have you up and running in seconds.</p>
-      </div>
-
-      <div class="feature">
-        <h2><i class="icon-cloud"></i>Run your builds on Heroku</h2>
-        <p>Ever had something run fine in development but break when you deploy it to Heroku?</p>
-        <p>No longer an issue: you can use Buildbox to run your build on Heroku. Use the same infrastructure for both production and CI!</p>
-      </div>
-    </div>
-
     <!-- Marketing messaging and featurettes
     ================================================== -->
     <!-- Wrap the rest of the page in another container to center all the content. -->
 
     <div class="container marketing">
-
+      <hr class="featurette-divider"  id='feature1'>
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-lg-4">
-          <img class="img-circle" src="data:image/png;base64," data-src="holder.js/140x140" alt="Generic placeholder image">
+          <i class="glyphicon glyphicon-book btn-lg"></i>
           <h2>Record ALL the history</h2>
-          <p>Single webapp to record and search all your history, from all your terminals in place.</p>
-          <p><a class="btn btn-default" href="#feature1">View details &raquo;</a></p>
+          <p>Single web service to record and search all your history, from all your terminals in one place.</p>
+          <!-- <p><a class="btn btn-default" href="#feature1">View details &raquo;</a></p> -->
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="data:image/png;base64," data-src="holder.js/140x140" alt="Generic placeholder image">
-          <h2>Setup, the way you like it.</h2>
-          <p>Easy setup, locally configurable, simple Unixy utility that does one thing and gets out of your way.</p>
-          <p><a class="btn btn-default" href="#feature2">View details &raquo;</a></p>
+          <i class="glyphicon glyphicon-cog btn-lg"></i>
+          <h2>Setup, the way it should be.</h2>
+          <p>Easy setup, local configuration with a simple Unixy utility that does one thing and gets out of your way.</p>
+          <!-- <p><a class="btn btn-default" href="#feature2">View details &raquo;</a></p> -->
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="data:image/png;base64," data-src="holder.js/140x140" alt="Generic placeholder image">
+          <i class="glyphicon glyphicon-search btn-lg"></i>
           <h2>Local Search</h2>
-          <p>Command line utility to search the remote history.</p>
-          <p><a class="btn btn-default" href="#feature3">View details &raquo;</a></p>
+          <p>Command line utility to search the remote history. Get all the history right where you need it.</p>
+          <!-- <p><a class="btn btn-default" href="#feature3">View details &raquo;</a></p> -->
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
 
-      <!-- START THE FEATURETTES -->
-
-      <hr class="featurette-divider"  id='feature1'>
-
-      <div class="row featurette">
-        <div class="col-md-7">
-          <h2 class="featurette-heading">Record All the history</h2>
-          <p class="lead">A simple local agent that records all your bash history, and then pushes the data to the Save History app. So you have a record of all your history, from all your terminals all in one place.</p>
-        </div>
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive" src="data:image/png;base64," data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-        </div>
-      </div>
-
-      <hr class="featurette-divider"  id='feature2'>
-
-      <div class="row featurette">
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive" src="data:image/png;base64," data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-        </div>
-        <div class="col-md-7">
-          <h2 class="featurette-heading">Easy setup. <span class="text-muted">Unixy goodness..</span></h2>
-          <p class="lead">What gets recorded is what goes into your history file. If you dont want duplicates, configure that locally. Dont want to wait until you exit the shell to record the commands, configure it locally. Easy local setup.</p>
-        </div>
-      </div>
-
-      <hr class="featurette-divider"  id='feature3'>
-
-      <div class="row featurette">
-        <div class="col-md-7">
-          <h2 class="featurette-heading">Local search.<span class="text-muted"> We love the web</span></h2>
-          <p class="lead">But you really want to be able to search from the commandline. So we gave you one. Search all your history from the command line.</p>
-        </div>
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive" src="data:image/png;base64," data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <!-- /END THE FEATURETTES -->
+      
 
 
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2013 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p>&copy; 2013 Plank &amp; Whittle, Inc. &middot;</p>
       </footer>
 
     </div><!-- /.container -->
@@ -247,9 +192,9 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="http://getbootstrap.com/assets/js/jquery.js"></script>
-    <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
-    <script src="http://getbootstrap.com/assets/js/holder.js"></script>
+    <script src="../static/assets/js/jquery.js"></script>
+    <script src="../static/assets/js/bootstrap.min.js"></script>
+    <script src="../static/assets/js/holder.js"></script>
 
   </body>
 </html>
