--- a/src/history_server/templates/home.html
+++ b/src/history_server/templates/home.html
@@ -4,6 +4,13 @@
 {% block js %}
 {% endblock %}
 
-
 {% block main %}
+<table>
+{% for row in rows %}
+    <tr>
+        <td>{{row.time }} - {{row.command}}</td>
+    </tr>
+{% endfor %}
+</table>
+
 {% endblock %}
